--- a/source/_posts/ctf4b-2019.md
+++ b/source/_posts/ctf4b-2019.md
@@ -4,7 +4,7 @@ date: 2019-05-26
 tags:
   - [CTF]
   - [writeup]
-  - [Seccon]
+  - [SECCON]
 ---
 SECCON 主催の [Beginners CTF 2019](https://2018.seccon.jp/beginners/about-seccon-beginners.html) に参加して、2問ほど解けたのでその解法を残しておこうと思います。二問とも Misc です。
 
